# LangGraph-Intelligent-Travel-Assistant

./: .gitignore  AINVOKE_STATE_WALKTHROUGH.md  README.md  TODO.md  environment.yml  langgraph.json  math_server.py  pyproject.toml  tewts01.py  tewts01_mcp.py
docs/summaries/: 2026-03-20-conda-env.md  2026-03-20-init.md  SUMMARY_TEMPLATE.md
src/langgraph_study/: __init__.py  amap_mcp_server.py  config.py  graph.py  llm.py  main.py  mcp_tools.py  nodes.py  state.py
src/langgraph_study/app/: __init__.py  cli.py  web.py
src/langgraph_study/assistant/: __init__.py  graph.py  memory.py  nodes.py  state.py
src/langgraph_study/backend/: __init__.py  api.py  thread_store.py
src/langgraph_study/core/: __init__.py  config.py
src/langgraph_study/frontend/: __init__.py  app.js  index.html  styles.css
src/langgraph_study/integrations/: __init__.py  llm.py  mcp_tools.py  memory.py  studio_tools.py
src/langgraph_study/mcp/: __init__.py  amap_server.py
tests/: test_amap_mcp_server.py  test_api.py  test_graph.py  test_main.py  test_mcp_tools.py  test_thread_store.py  test_web.py
