[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "langgraph-study"
version = "0.1.0"
description = "A minimal LangGraph study project for systematic learning."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "langgraph>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

