[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "langgraph-study"
version = "0.1.0"
description = "A minimal LangGraph study project for systematic learning."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "langgraph>=1.0.0",
    "langgraph-checkpoint-sqlite>=3.0.0",
    "langchain-community>=0.4.0",
    "langchain-mcp-adapters>=0.1.0",
    "dashscope>=1.25.0",
    "mcp>=1.0.0",
    "fastapi>=0.116.0",
    "uvicorn>=0.35.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"langgraph_study.frontend" = ["*.html", "*.css", "*.js"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
